--- a/index.html
+++ b/index.html
@@ -94,6 +94,75 @@
             <p data-text-sv="Relationer är komplexa, och ibland behöver par professionell hjälp för att navigera genom utmaningar, förbättra kommunikationen och återuppbygga närhet. Parterapi erbjuder ett tryggt och neutralt utrymme där båda parter kan uttrycka sina känslor och behov. Vi arbetar med att identifiera underliggande mönster, lära oss effektiva kommunikationsstrategier och utveckla verktyg för att lösa konflikter på ett konstruktivt sätt. Målet är att stärka er relation, öka förståelsen för varandra och skapa en mer kärleksfull och stödjande dynamik. Oavsett om ni står inför stora utmaningar, vill förbättra er vardag, eller bara fördjupa er förståelse för varandra, är parterapi en investering i er gemensamma framtid. Låt oss tillsammans hitta en väg som stärker ert band och för er närmare varandra." data-text-en="Relationships are complex, and sometimes couples need professional help to navigate challenges, improve communication, and rebuild intimacy. Couples therapy offers a safe and neutral space where both partners can express their feelings and needs. We work to identify underlying patterns, learn effective communication strategies and develop tools to resolve conflicts constructively. The goal is to strengthen your relationship, increase understanding of each other, and create a more loving and supportive dynamic. Whether you are facing major challenges, want to improve your daily life, or simply deepen your understanding of each other, couples therapy is an investment in your shared future. Let us together find a path that strengthens your bond and brings you closer.">Relationer är komplexa, och iball behöver par professionell hjälp för att navigera genom utmaningar, förbättra kommunikationen och återuppbygga närhet. Parterapi erbjuder ett tryggt och neutralt utrymme där båda parter kan uttrycka sina känslor och behov. Vi arbetar med att identifiera underliggande mönster, lära oss effektiva kommunikationsstrategier och utveckla verktyg för att lösa konflikter på ett konstruktivt sätt. Målet är att stärka er relation, öka förståelsen för varandra och skapa en mer kärleksfull och stödjande dynamik. Oavsett om ni står inför stora utmaningar, vill förbättra er vardag, eller bara fördjupa er förståelse för varandra, är parterapi en investering i er gemensamma framtid. Låt oss tillsammans hitta en väg som stärker ert band och för er närmare varandra.</p>
             <a href="#contact-section" class="back-to-services" data-text-sv="Kontakta mig" data-text-en="Contact Me">Kontakta mig <i class="fas fa-envelope"></i></a>
         </section>
+
+        <section id="pricing-section" class="content-section pricing-section">
+            <h2 class="section-title" data-text-sv="Investera i Ditt Välmående – Priser för Online Samtalsterapi & Coaching" data-text-en="Invest in Your Well-being – Prices for Online Talk Therapy & Coaching">Investera i Ditt Välmående – Priser för Online Samtalsterapi & Coaching</h2>
+            <div class="pricing-grid">
+                <div class="price-box">
+                    <h3 data-text-sv="Enskilt Samtal" data-text-en="Single Session">Enskilt Samtal</h3>
+                    <p class="duration" data-text-sv="50 minuter" data-text-en="50 minutes">50 minuter</p>
+                    <p class="price" data-text-sv="[DITT PRIS] SEK" data-text-en="[YOUR PRICE] SEK">[DITT PRIS] SEK</p>
+                    <p class="description" data-text-sv="Perfekt för att komma igång eller för specifika frågeställningar." data-text-en="Perfect to get started or for specific issues.">Perfekt för att komma igång eller för specifika frågeställningar.</p>
+                    <a href="#contact-section" class="button-cta" data-text-sv="Boka Enskilt Samtal" data-text-en="Book Single Session">Boka Enskilt Samtal <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="price-box featured">
+                    <h3 data-text-sv="Klippkort – 3 Samtal" data-text-en="Package – 3 Sessions">Klippkort – 3 Samtal</h3>
+                    <p class="duration" data-text-sv="3 x 50 minuter" data-text-en="3 x 50 minutes">3 x 50 minuter</p>
+                    <p class="price" data-text-sv="[DITT RABATTERADE PRIS] SEK" data-text-en="[YOUR DISCOUNTED PRICE] SEK">[DITT RABATTERADE PRIS] SEK</p>
+                    <p class="save-info" data-text-sv="(Spara X SEK)" data-text-en="(Save X SEK)">(Spara X SEK)</p>
+                    <p class="description" data-text-sv="För dig som vill ha kontinuitet och arbeta mer djupgående." data-text-en="For those who want continuity and to work more in-depth.">För dig som vill ha kontinuitet och arbeta mer djupgående.</p>
+                    <a href="#contact-section" class="button-cta" data-text-sv="Boka Klippkort" data-text-en="Book Package">Boka Klippkort <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="price-box">
+                    <h3 data-text-sv="Klippkort – 5 Samtal" data-text-en="Package – 5 Sessions">Klippkort – 5 Samtal</h3>
+                    <p class="duration" data-text-sv="5 x 50 minuter" data-text-en="5 x 50 minutes">5 x 50 minuter</p>
+                    <p class="price" data-text-sv="[DITT MER RABATTERADE PRIS] SEK" data-text-en="[YOUR FURTHER DISCOUNTED PRICE] SEK">[DITT MER RABATTERADE PRIS] SEK</p>
+                    <p class="save-info" data-text-sv="(Spara Y SEK)" data-text-en="(Save Y SEK)">(Spara Y SEK)</p>
+                    <p class="description" data-text-sv="Vårt mest populära alternativ för en mer engagerad förändringsprocess." data-text-en="Our most popular option for a more engaged change process.">Vårt mest populära alternativ för en mer engagerad förändringsprocess.</p>
+                    <a href="#contact-section" class="button-cta" data-text-sv="Boka Större Klippkort" data-text-en="Book Larger Package">Boka Större Klippkort <i class="fas fa-arrow-right"></i></a>
+                </div>
+            </div>
+            <div class="free-consultation">
+                <h3 data-text-sv="Gratis Introduktionssamtal" data-text-en="Free Introductory Session">Gratis Introduktionssamtal</h3>
+                <p class="duration" data-text-sv="15 minuter" data-text-en="15 minutes">15 minuter</p>
+                <p class="price" data-text-sv="Kostnadsfritt" data-text-en="Free of Charge">Kostnadsfritt</p>
+                <p class="description" data-text-sv="Ett kortare onlinemöte där vi kan lära känna varandra, diskutera dina behov och se om vi är en bra matchning för ett fortsatt samarbete. Ingen bindning." data-text-en="A brief online meeting where we can get to know each other, discuss your needs, and see if we are a good match for continued collaboration. No commitment.">Ett kortare onlinemöte där vi kan lära känna varandra, diskutera dina behov och se om vi är en bra matchning för ett fortsatt samarbete. Ingen bindning.</p>
+                <a href="#contact-section" class="button-cta primary-cta" data-text-sv="Boka Ditt Kostnadsfria Introduktionssamtal Online Nu" data-text-en="Book Your Free Introductory Session Online Now">Boka Ditt Kostnadsfria Introduktionssamtal Online Nu <i class="fas fa-calendar-check"></i></a>
+            </div>
+            <p class="payment-info" data-text-sv="Betalningsinformation: Information om hur betalning sker (t.ex. Swish innan sessionen, faktura efter överenskommelse, etc.). Ange dina betalningsvillkor tydligt." data-text-en="Payment Information: Information on how payment is made (e.g., Swish before the session, invoice by agreement, etc.). Please state your payment terms clearly.">Betalningsinformation: Information om hur betalning sker (t.ex. Swish innan sessionen, faktura efter överenskommelse, etc.). Ange dina betalningsvillkor tydligt.</p>
+        </section>
+
+        <section id="how-it-works-section" class="content-section how-it-works-section">
+            <h2 class="section-title" data-text-sv="Så Fungerar Våra Online-samtal – Enkelt, Tryggt och Flexibelt" data-text-en="How Our Online Sessions Work – Simple, Secure, and Flexible">Så Fungerar Våra Online-samtal – Enkelt, Tryggt och Flexibelt</h2>
+            <div class="steps-grid">
+                <div class="step-box">
+                    <i class="fas fa-calendar-alt step-icon"></i>
+                    <h3 data-text-sv="1. Bokning" data-text-en="1. Booking">1. Bokning</h3>
+                    <p data-text-sv="Du kontaktar mig via <a href='#contact-section'>kontaktformuläret</a> eller e-post. Vi kan börja med ett kostnadsfritt 15-minuters introduktionssamtal för att se om vi är en bra matchning." data-text-en="You contact me via the <a href='#contact-section'>contact form</a> or email. We can start with a free 15-minute introductory session to see if we are a good match.">Du kontaktar mig via <a href="#contact-section">kontaktformuläret</a> eller e-post. Vi kan börja med ett kostnadsfritt 15-minuters introduktionssamtal för att se om vi är en bra matchning.</p>
+                </div>
+                <div class="step-box">
+                    <i class="fas fa-video step-icon"></i>
+                    <h3 data-text-sv="2. Plattform" data-text-en="2. Platform">2. Plattform</h3>
+                    <p data-text-sv="Vi använder säkra och användarvänliga plattformar som Microsoft Teams eller Zoom, beroende på vad du föredrar. Jag har god vana vid båda programmen." data-text-en="We use secure and user-friendly platforms such as Microsoft Teams or Zoom, depending on your preference. I am well-versed in both programs.">Vi använder säkra och användarvänliga plattformar som Microsoft Teams eller Zoom, beroende på vad du föredrar. Jag har god vana vid båda programmen.</p>
+                </div>
+                <div class="step-box">
+                    <i class="fas fa-wifi step-icon"></i>
+                    <h3 data-text-sv="3. Inför Samtalet" data-text-en="3. Before the Session">3. Inför Samtalet</h3>
+                    <p data-text-sv="Allt du behöver är en stabil internetuppkoppling, en dator, surfplatta eller smartphone med kamera och mikrofon, samt en ostörd plats där du kan tala fritt." data-text-en="All you need is a stable internet connection, a computer, tablet, or smartphone with a camera and microphone, and an undisturbed place where you can speak freely.">Allt du behöver är en stabil internetuppkoppling, en dator, surfplatta eller smartphone med kamera och mikrofon, samt en ostörd plats där du kan tala fritt.</p>
+                </div>
+                <div class="step-box">
+                    <i class="fas fa-comments step-icon"></i>
+                    <h3 data-text-sv="4. Under Samtalet" data-text-en="4. During the Session">4. Under Samtalet</h3>
+                    <p data-text-sv="Precis som vid ett fysiskt möte fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet." data-text-en="Just like a physical meeting, we focus entirely on you and your needs. The digital format offers great flexibility and accessibility.">Precis som vid ett fysiskt möte fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet.</p>
+                </div>
+                <div class="step-box">
+                    <i class="fas fa-lock step-icon"></i>
+                    <h3 data-text-sv="5. Sekretess & Betalning" data-text-en="5. Confidentiality & Payment">5. Sekretess & Betalning</h3>
+                    <p data-text-sv="Din integritet är av yttersta vikt. Alla samtal är konfidentiella och sker via krypterade anslutningar. Betalning sker enligt överenskommelse." data-text-en="Your privacy is of utmost importance. All sessions are confidential and conducted via encrypted connections. Payment is made by agreement.">Din integritet är av yttersta vikt. Alla samtal är konfidentiella och sker via krypterade anslutningar. Betalning sker enligt överenskommelse.</p>
+                </div>
+            </div>
+        </section>
+
         <section id="about-section" class="content-section about-me-container">
             <div class="about-me-layout">
                 <h2 class="about-me-title" data-text-sv="Om mig" data-text-en="About Me">Om mig</h2>
@@ -206,10 +275,71 @@
             const couplesTherapyTitle = document.querySelector('#couples-therapy-info .section-title');
             if (couplesTherapyTitle) couplesTherapyTitle.textContent = lang === 'sv' ? 'Parterapi' : 'Couples Therapy';
 
+            const pricingTitle = document.querySelector('#pricing-section .section-title');
+            if (pricingTitle) pricingTitle.textContent = lang === 'sv' ? 'Investera i Ditt Välmående – Priser för Online Samtalsterapi & Coaching' : 'Invest in Your Well-being – Prices for Online Talk Therapy & Coaching';
+
+            const howItWorksTitle = document.querySelector('#how-it-works-section .section-title');
+            if (howItWorksTitle) howItWorksTitle.textContent = lang === 'sv' ? 'Så Fungerar Våra Online-samtal – Enkelt, Tryggt och Flexibelt' : 'How Our Online Sessions Work – Simple, Secure, and Flexible';
 
             // Uppdatera "Back to Services" länkar
             document.querySelectorAll('.back-to-services').forEach(link => {
                 link.textContent = lang === 'sv' ? 'Kontakta mig' : 'Contact Me';
+            });
+
+            // Uppdatera prissättningssektionens texter
+            document.querySelectorAll('#pricing-section .price-box h3').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#pricing-section .price-box .duration').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#pricing-section .price-box .price').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#pricing-section .price-box .description').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#pricing-section .price-box .save-info').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#pricing-section .button-cta').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.innerHTML = lang === 'sv' ? `${svText} <i class="fas fa-arrow-right"></i>` : `${enText} <i class="fas fa-arrow-right"></i>`;
+            });
+            const freeConsultationCta = document.querySelector('#pricing-section .primary-cta');
+            if (freeConsultationCta) {
+                const svText = freeConsultationCta.getAttribute('data-text-sv');
+                const enText = freeConsultationCta.getAttribute('data-text-en');
+                freeConsultationCta.innerHTML = lang === 'sv' ? `${svText} <i class="fas fa-calendar-check"></i>` : `${enText} <i class="fas fa-calendar-check"></i>`;
+            }
+            const paymentInfo = document.querySelector('#pricing-section .payment-info');
+            if (paymentInfo) {
+                const svText = paymentInfo.getAttribute('data-text-sv');
+                const enText = paymentInfo.getAttribute('data-text-en');
+                paymentInfo.textContent = lang === 'sv' ? svText : enText;
+            }
+
+            // Uppdatera "Hur fungerar online-samtalen?" sektionens texter
+            document.querySelectorAll('#how-it-works-section .step-box h3').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.textContent = lang === 'sv' ? svText : enText;
+            });
+            document.querySelectorAll('#how-it-works-section .step-box p').forEach(element => {
+                const svText = element.getAttribute('data-text-sv');
+                const enText = element.getAttribute('data-text-en');
+                element.innerHTML = lang === 'sv' ? svText : enText; // Use innerHTML to preserve <a> tag
             });
         }
     </script>
