--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title data-text-sv="En tryggare väg" data-text-en="A Safer Path">En tryggare väg</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -74,7 +74,7 @@
 
         <section id="depression-info" class="service-detail-section depression-detail content-section">
             <h2 class="section-title" data-text-sv="Stöd vid nedstämdhet och orkeslöshet" data-text-en="Support for Low Mood and Lack of Energy">Stöd vid nedstämdhet och orkeslöshet</h2>
-            <p data-text-sv="När glädjen bleknar och vardagen känns tung, kan känslor av nedstämdhet och brist på energi ta över. Det är en djupgående känsla som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att dessa känslor är verkliga och att du inte behöver bära dem ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående." data-text-en="When joy fades and everyday life feels heavy, feelings of low mood and lack of energy can take over. It is a profound feeling that can affect everything from your energy, sleep, and appetite to your ability to feel joy and meaning. Perhaps you feel empty, apathetic, or find it difficult to see a way out of the darkness. It is important to know that these feelings are real and that you don't have to bear them alone. In our conversations, we create a safe and understanding space where you can explore your feelings without judgment. We focus on gently reintroducing activities that provide energy and zest for life, building healthy routines, and identifying thought patterns that keep you in a state of low mood. The goal is to gradually help you regain your inner strength, discover new perspectives and find your way back to the light and meaning in your life. Together, we can work to build a stable foundation for your well-being.">När glädjen bleknar och vardagen känns tung, kan känslor av nedstämdhet och brist på energi ta över. Det är en djupgående känsla som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående.</p>
+            <p data-text-sv="När glädjen bleknar och vardagen känns tung, kan känslor av nedstämdhet och brist på energi ta över. Det är en djupgående känsla som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att dessa känslor är verkliga och att du inte behöver bära dem ensam. I våra samtal skapar we ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående." data-text-en="When joy fades and everyday life feels heavy, feelings of low mood and lack of energy can take over. It is a profound feeling that can affect everything from your energy, sleep, and appetite to your ability to feel joy and meaning. Perhaps you feel empty, apathetic, or find it difficult to see a way out of the darkness. It is important to know that these feelings are real and that you don't have to bear them alone. In our conversations, we create a safe and understanding space where you can explore your feelings without judgment. We focus on gently reintroducing activities that provide energy and zest for life, building healthy routines, and identifying thought patterns that keep you in a state of low mood. The goal is to gradually help you regain your inner strength, discover new perspectives and find your way back to the light and meaning in your life. Together, we can work to build a stable foundation for your well-being.">När glädjen bleknar och vardagen känns tung, kan känslor av nedstämdhet och brist på energi ta över. Det är en djupgående känsla som kan påverka allt från din energi, sömn och aptit till din förmåga att känna glädje och meningsfullhet. Kanske känner du dig tom, apatisk, eller har svårt att se en väg ut ur mörkret. Det är viktigt att veta att depression är en verklig och behandlingsbar sjukdom, och du behöver inte bära den ensam. I våra samtal skapar vi ett tryggt och förstående rum där du kan utforska dina känslor utan dömande. Vi fokuserar på att varsamt återinföra aktiviteter som ger energi och livsglädje, bygga upp sunda rutiner och identifiera tankemönster som håller dig kvar i nedstämdheten. Målet är att steg för steg hjälpa dig att återfå din inre styrka, upptäcka nya perspektiv och hitta tillbaka till ljuset och meningsfullheten i ditt liv. Tillsammans kan vi arbeta för att bygga en stabil grund för ditt välmående.</p>
             <a href="#contact-section" class="back-to-services" data-text-sv="Kontakta mig" data-text-en="Contact Me">Kontakta mig <i class="fas fa-envelope"></i></a>
         </section>
 
@@ -153,7 +153,7 @@
                 <div class="step-box">
                     <i class="fas fa-comments step-icon"></i>
                     <h3 data-text-sv="4. Under Samtalet" data-text-en="4. During the Session">4. Under Samtalet</h3>
-                    <p data-text-sv="Precis som vid ett fysiskt möte fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet." data-text-en="Just like a physical meeting, we focus entirely on you and your needs. The digital format offers great flexibility and accessibility.">Precis som vid ett fysiskt möte fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet.</p>
+                    <p data-text-sv="Precis som vid ett fysiskt möte fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet." data-text-en="Just like a physical meeting, we focus entirely on you and your needs. The digital format offers great flexibility and accessibility.">Precis som vid ett fysiskt mötes fokuserar vi helt på dig och dina behov. Det digitala formatet ger stor flexibilitet och tillgänglighet.</p>
                 </div>
                 <div class="step-box">
                     <i class="fas fa-lock step-icon"></i>
@@ -197,7 +197,17 @@
 
     <footer>
         <p data-text-sv="&copy; 2025 En tryggare väg. Alla rättigheter förbehållna." data-text-en="&copy; 2025 A Safer Path. All rights reserved.">&copy; 2025 En tryggare väg. Alla rättigheter förbehållna.</p>
+        <p><a href="#privacy-policy" data-text-sv="Integritetspolicy" data-text-en="Privacy Policy">Integritetspolicy</a></p>
     </footer>
+
+    <div id="cookie-consent-banner" class="cookie-consent-banner">
+        <p data-text-sv="Vi använder cookies för att förbättra din upplevelse på vår webbplats. Genom att fortsätta surfa godkänner du detta. Läs mer i vår " data-text-en="We use cookies to improve your experience on our website. By continuing to browse, you agree to this. Read more in our ">Vi använder cookies för att förbättra din upplevelse på vår webbplats. Genom att fortsätta surfa godkänner du detta. Läs mer i vår </p>
+        <a href="#privacy-policy" data-text-sv="Integritetspolicy" data-text-en="Privacy Policy">Integritetspolicy</a>.
+        <div class="cookie-buttons">
+            <button id="accept-cookies" data-text-sv="Godkänn" data-text-en="Accept">Godkänn</button>
+            <button id="decline-cookies" data-text-sv="Neka" data-text-en="Decline">Neka</button>
+        </div>
+    </div>
 
     <script>
         // Smooth scrolling för navlänkar och service-detaljlänkar
@@ -244,7 +254,18 @@
 
         function updateTexts(lang) {
             document.querySelectorAll('[data-text-sv]').forEach(element => {
-                if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
+                // Check if the element is part of the cookie banner and should be handled specially
+                if (element.closest('#cookie-consent-banner') && (element.tagName === 'P' || element.tagName === 'A' || element.tagName === 'BUTTON')) {
+                    const svText = element.getAttribute('data-text-sv');
+                    const enText = element.getAttribute('data-text-en');
+                    if (element.tagName === 'BUTTON') {
+                        element.textContent = lang === 'sv' ? svText : enText;
+                    } else if (element.tagName === 'A') {
+                        element.textContent = lang === 'sv' ? svText : enText;
+                    } else { // For the paragraph
+                        element.innerHTML = lang === 'sv' ? `${svText} <a href="#privacy-policy" data-text-sv="Integritetspolicy" data-text-en="Privacy Policy">Integritetspolicy</a>.` : `${enText} <a href="#privacy-policy" data-text-sv="Integritetspolicy" data-text-en="Privacy Policy">Privacy Policy</a>.`;
+                    }
+                } else if (element.tagName === 'INPUT' || element.tagName === 'TEXTAREA') {
                     // För formulärfält som använder placeholder, inte textContent
                 } else {
                     element.textContent = element.getAttribute(lang === 'sv' ? 'data-text-sv' : 'data-text-en');
@@ -337,6 +358,36 @@
                 element.innerHTML = lang === 'sv' ? svText : enText; // Use innerHTML to preserve <a> tag
             });
         }
+
+        // Cookie Consent Logic
+        document.addEventListener('DOMContentLoaded', () => {
+            const cookieBanner = document.getElementById('cookie-consent-banner');
+            const acceptButton = document.getElementById('accept-cookies');
+            const declineButton = document.getElementById('decline-cookies');
+            const consentGiven = localStorage.getItem('cookieConsent');
+
+            if (consentGiven === 'accepted') {
+                cookieBanner.style.display = 'none';
+            } else if (consentGiven === 'declined') {
+                // If declined, you might want to disable certain scripts or features.
+                // For now, we just hide the banner.
+                cookieBanner.style.display = 'none';
+            } else {
+                cookieBanner.style.display = 'flex'; // Show the banner if no consent
+            }
+
+            acceptButton.addEventListener('click', () => {
+                localStorage.setItem('cookieConsent', 'accepted');
+                cookieBanner.style.display = 'none';
+            });
+
+            declineButton.addEventListener('click', () => {
+                localStorage.setItem('cookieConsent', 'declined');
+                cookieBanner.style.display = 'none';
+                // Implement logic to disable non-essential cookies here if needed
+                // For example, if you use Google Analytics, you would disable it here.
+            });
+        });
     </script>
 </body>
 </html>
