--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p class="duration" data-text-sv="3 x 50 minuter" data-text-en="3 x 50 minutes">3 x 50 minuter</p>
                     <p class="price" data-text-sv="[DITT RABATTERADE PRIS] SEK" data-text-en="[YOUR DISCOUNTED PRICE] SEK">[DITT RABATTERADE PRIS] SEK</p>
                     <p class="save-info" data-text-sv="(Spara X SEK)" data-text-en="(Save X SEK)">(Spara X SEK)</p>
-                    <p class="description" data-text-sv="För dig som vill ha kontinuitet och arbeta mer djupgående." data-text-en="For those who want continuity and to work more in-depth.">För dig som vill ha kontinuitet och arbeta mer djupgående.</p>
+                    <p class="description" data-text-sv="För dig som vill ha kontinuitet och arbeta mer djupgående." data-text-en="For dig som vill ha kontinuitet och arbeta mer djupgående.">För dig som vill ha kontinuitet och arbeta mer djupgående.</p>
                     <a href="#contact-section" class="button-cta" data-text-sv="Boka Klippkort" data-text-en="Book Package">Boka Klippkort <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="price-box">
